// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevServer get client bundle 1`] = `"console.log(\\"Hello from client!\\");"`;

exports[`DevServer refresh data on file change 1`] = `
"
                <html>
                    <head> 
                        <script src=\\"/_theme/client.123.js\\"></script>
                    
        <script type=\\"application/ld+json\\">
            {
    \\"@type\\": \\"BlogPosting\\",
    \\"headline\\": \\"Test blog\\",
    \\"text\\": \\"\\\\n\\\\nHello world 3 changed!\\\\n\\",
    \\"encodingFormat\\": \\"text/markdown\\",
    \\"@id\\": \\"/testblog\\"
}
        </script></head>
                    <body>
                        <h1>Hello from mock theme</h1>
                    
        <script>
            function openSocket() {
                const sambalws = new WebSocket(\\"ws://localhost:3001/\\");
                sambalws.onopen = function() {
                    console.log('Sambal dev server connected');
                };
                
                sambalws.onmessage = function(e) {
                    if (e.data === \\"refresh\\") {
                        console.log('Reloading...');
                        window.location.reload();
                    }
                }
    
                sambalws.onclose = function(e) {
                    console.log(\\"Sambal dev server disconnected\\");
                    setTimeout(() => {
                        openSocket();
                    }, 2000);
                };
            }
            openSocket();
        </script></body>
                </html>
            "
`;

exports[`DevServer render html 1`] = `
"
                <html>
                    <head> 
                        <script src=\\"/_theme/client.123.js\\"></script>
                    
        <script type=\\"application/ld+json\\">
            {
    \\"@type\\": \\"SoftwareSourceCode\\",
    \\"name\\": \\"Sambal\\",
    \\"headline\\": \\"A linked data static site generator\\",
    \\"description\\": \\"A linked data static site generator\\",
    \\"text\\": \\"&lt;need to &lt;&gt; escape&gt;\\",
    \\"@id\\": \\"/\\"
}
        </script></head>
                    <body>
                        <h1>Hello from mock theme</h1>
                    
        <script>
            function openSocket() {
                const sambalws = new WebSocket(\\"ws://localhost:3001/\\");
                sambalws.onopen = function() {
                    console.log('Sambal dev server connected');
                };
                
                sambalws.onmessage = function(e) {
                    if (e.data === \\"refresh\\") {
                        console.log('Reloading...');
                        window.location.reload();
                    }
                }
    
                sambalws.onclose = function(e) {
                    console.log(\\"Sambal dev server disconnected\\");
                    setTimeout(() => {
                        openSocket();
                    }, 2000);
                };
            }
            openSocket();
        </script></body>
                </html>
            "
`;
